--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Hello, {{ name }}
-    <form action="/greet" method="get">
-        <input autocomplete="off" autofocus  name="name" placeholder="Name">
-        <button type="submit">Greet</button>
+{% extends 'layout.html' %} {% block body %}
 
-    </form>
-</body>
-</html>
+<h1>Welcome To My Blog</h1>
+
+Hello, {{ name }}
+<form action="/greet" method="get">
+  <input autocomplete="off" autofocus name="name" placeholder="Name" />
+  <button type="submit">Greet</button>
+</form>
+
+{% endblock%}
