--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,6 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1 class="text-4xl">Astro</h1>
+		<h1 class="text-4xl">Welcome to the blog</h1>
 	</body>
 </html>
