footer and navbar

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,4 +1,25 @@
 <nav class="bg-gray-600 text-white">
-    <a href="/">Home</a>
-    <a href="/about">About</a>
+  <div
+    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+  >
+  <a href="/" class="flex item-center space-x-3 rtl:space=x-reverse">Contemplador
+</a>
+    <button
+      data-collapse-toggle="navbar-default"
+      type="button"
+      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+      >=</button
+    >
+    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <ul
+        class="fon-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 text-white rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0"
+      >
+        <a href="/" class="block py-2 px-3 rounded md:p-0 hover:text-indigo-400"
+          >Home</a
+        >
+        <a href="/articles">All Articles</a>
+        <a href="/about">About</a>
+      </ul>
+    </div>
+  </div>
 </nav>
