--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -3,4 +3,4 @@ import MainLayout from "../../layouts/MainLayout.astro";
 ---
 
 
-<MainLayout>Articles</MainLayout>
+<MainLayout ti>Articles</MainLayout>
