--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import MainLayout from "../../src/layouts/MainLayout.astro";
 ---
 
 <MainLayout title="Welcome">
-  <h1 class="text-4xl">Welcome to the blog</h1>
+  <h1 class="text-2xl">El Contemplador</h1>
 </MainLayout>
