--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,2 +1,43 @@
-<footer class="bg-indigo-600 text-white "><h2>Roosevelt Segura<h2></footer>
+---
+import { capitalize } from "../utils";
 
+const uniqueTags: string[] = ["Tech", "Parenting", "Dancing"];
+---
+
+<footer class="bg-indigo-600 text-white">
+  <div class="container mx-auto mt-8 max-w-screen-xl px-8">
+    <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
+      <div class="mt-6">
+        <h3 class="text-lg font-semibold mb-4">About</h3>
+        <p class="text-white text-sm">
+          El Contemplador is a personal blog by Roosevelt Segura. The intent of
+          this blog is to display web develoment skill and also to share thought
+          and ideas.
+        </p>
+      </div>
+      <div class="mt-6">
+        <h3 class="text-xl font-semibold mb-4">Categories</h3>
+        <ul>
+          {
+            uniqueTags.map((tag) => (
+              <li class="mb-2">
+                <a href="">#{capitalize(tag)}</a>
+              </li>
+            ))
+          }
+        </ul>
+      </div>
+      <div class="mt-6">
+        <h3 class="text-xl font-semibold mb-4">Contact</h3>
+        <ul class="text-white text-sm">
+            <li class="mb-2"><a href="#">Email</a></li>
+            <li class="mb-2"><a href="#">Facebook</a></li>
+            <li class="mb-2"><a href="#">Instagram</a></li>
+            <li class="mb-2"><a href="#">Linkedin</a></li>
+            <li class="mb-2"><a href="#">Twitter</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <p class="text-end text-xs">Roosevelt Segura</p>
+</footer>
