--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -11,7 +11,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../constants";
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>{SITE_TITLE} - {title}</title>
+    <title>{SITE_TITLE} 🤔 {title}</title>
   </head>
 
   <body class="">
