added card and searchbar components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,7 +11,7 @@ const uniqueTags: string[] = ["Tech", "Parenting", "Dancing"];
         <h3 class="text-lg font-semibold mb-4">About</h3>
         <p class="text-white text-sm">
           El Contemplador is a personal blog by Roosevelt Segura. The intent of
-          this blog is to display web develoment skill and also to share thought
+          this blog is to display web develoment skills and also to share thought
           and ideas.
         </p>
       </div>
