--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -43,13 +43,15 @@
           <a
             href="/articles"
             class="block py-2 px-3 rounded md:p-0 hover:text-indigo-400"
-            >All Articles</a>
+            >All Articles</a
+          >
         </li>
         <li>
           <a
             href="/about"
             class="block py-2 px-3 rounded md:p-0 hover:text-indigo-400"
-            >About</a>
+            >About</a
+          >
         </li>
       </ul>
     </div>
