--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -1,16 +1,25 @@
 ---
-import { CollectionEntry } from 'astro:content'
-import { MarkdownFrontmatterParseError } from '../../node_modules/astro/dist/core/errors/errors-data';
+import { formatDate } from "../utils";
+import { CollectionEntry } from "astro:content";
+import { MarkdownFrontmatterParseError } from "../../node_modules/astro/dist/core/errors/errors-data";
+import Tags from "./Tags.astro";
 
 const { article } = Astro.props;
 
 interface Props {
-    article: CollectionEntry<'blog'>;
+  article: CollectionEntry<"blog">;
 }
 ---
 
-<div class="max-w-md mx-auto mt-10">
-    <div class="bg-white rounded-lg overflow-hidden shadow-lg">
-        <a href={"/articles/" + article.slug}></a> content
+<div class="max-w-md  mt-10">
+  <div class="bg-slate-200 rounded-lg overflow-hidden shadow-lg">
+    <a href={"/articles/" + article.slug}> Image goes here</a>
+    <div class="p-6">
+      <h2 class="text-2xl font-semibold mb-2">
+        <a href={"/articles/" + article.slug}>{article.data.title}</a>
+      </h2>
+      <p class="text-gray-600 text-sm mb-4">{formatDate(article.data.pubDate)}</p>
+      <Tags tags={article.data.tags} />
     </div>
+  </div>
 </div>
