--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -1,6 +1,45 @@
 ---
 import MainLayout from "../../layouts/MainLayout.astro";
+import ArticleCard from "../../components/ArticleCard.astro";
+import SearchForm from "../../components/SearchForm.astro";
+import Pagination from "../../components/Pagination.astro";
+import { CollectionKey, ContentCollectionKey, getCollection } from "astro:content";
+import type { CollectionEntry } from "astro:content";
+import { ARTICLES_PER_PAGE } from "../../constants";
+import { AstroAssets } from "astro:assets";
+
+const currentPage: number | null = +Astro.url.searchParams.get('page')! || 1;
+
+const allBlogArticles: CollectionEntry<'blog'>[] = (await getCollection('blog')).sort((a:CollectionEntry<'blog'>, b:CollectionEntry<'blog'>) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
+
+const totalPages: number = Math.ceil(allBlogArticles.length / ARTICLES_PER_PAGE);
+
+const articlesForPage: CollectionEntry<'blog'>[] = allBlogArticles.slice((currentPage - 1) * ARTICLES_PER_PAGE, currentPage * ARTICLES_PER_PAGE);
+
+
+
 ---
 
 
-<MainLayout ti>Articles</MainLayout>
+<MainLayout>
+   
+<h1 class="text-2xl pb-3">Articles</h1>
+<SearchForm />
+
+<br>
+
+<div class="grid grid-cols-1 gap-4 sm:grid-col-3">
+    Placeholder
+    {articlesForPage.map(article => (
+        <ArticleCard article={article} />
+
+    ))}
+</div>
+
+<Pagination 
+currentPage={currentPage}
+totalPages={totalPages}
+disablePrevious={currentPage === 1}
+disableNext={currentPage === totalPages}
+
+</MainLayout>
