--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,19 +4,30 @@ import { getCollection } from "astro:content";
 import ArticleCard from "../components/ArticleCard.astro";
 import type { CollectionEntry } from "astro:content";
 import { HOMEPAGE_ARTICLE_LIMIT } from "../constants";
+import SearchForm from "../components/SearchForm.astro";
 
 const allBlogArticles: CollectionEntry<"blog">[] = await getCollection("blog");
 const otherArticles: CollectionEntry<"blog">[] = allBlogArticles;
 ---
 
 <MainLayout>
-  <h1 class="text-2xl">El Contemplador</h1>
+  <!-- Top Grid -->
+  <div class="grid grid-cols-1 gap-4 lg:grid-cols-2">
+    <div>
+      <h1 class="text-3xl font-bold mt-4 mb-8 leading-tight xl:text-6xl">
+        Articles & More
+      </h1>
+      <SearchForm />
+    </div>
+    <!-- <MostRecentArticle article="{mostRecentArticle}" /> -->
 
-  <div class="grid grid-cols-1 gap-4">
-    {
-      otherArticles
-        .slice(0, HOMEPAGE_ARTICLE_LIMIT)
-        .map((article) => <ArticleCard article={article} />)
-    }
+    <!-- Main Grid -->
   </div>
+    <div class="">
+      {
+        otherArticles
+          .slice(0, HOMEPAGE_ARTICLE_LIMIT)
+          .map((article) => <ArticleCard article={article} />)
+      }
+    </div>
 </MainLayout>
