--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,14 @@ import ArticleCard from "../components/ArticleCard.astro";
 import type { CollectionEntry } from "astro:content";
 import { HOMEPAGE_ARTICLE_LIMIT } from "../constants";
 import SearchForm from "../components/SearchForm.astro";
+import MostRecentArticle from "../components/MostRecentArticle.astro";
+
+
 
 const allBlogArticles: CollectionEntry<"blog">[] = await getCollection("blog");
-const otherArticles: CollectionEntry<"blog">[] = allBlogArticles;
+const otherArticles: CollectionEntry<"blog">[] = allBlogArticles.slice(1);
+
+const mostRecentArticle: CollectionEntry<'blog'> = allBlogArticles[0];
 ---
 
 <MainLayout>
@@ -19,15 +24,15 @@ const otherArticles: CollectionEntry<"blog">[] = allBlogArticles;
       </h1>
       <SearchForm />
     </div>
-    <!-- <MostRecentArticle article="{mostRecentArticle}" /> -->
+    <MostRecentArticle article={mostRecentArticle} />
 
     <!-- Main Grid -->
   </div>
-    <div class="">
-      {
-        otherArticles
-          .slice(0, HOMEPAGE_ARTICLE_LIMIT)
-          .map((article) => <ArticleCard article={article} />)
-      }
-    </div>
+  <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
+    {
+      otherArticles
+        .slice(0, HOMEPAGE_ARTICLE_LIMIT)
+        .map((article) => <ArticleCard article={article} />)
+    }
+  </div>
 </MainLayout>
