--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -12,7 +12,7 @@ interface Props {
 ---
 
 <div class="max-w-md  mt-10">
-  <div class="bg-slate-200 rounded-lg overflow-hidden shadow-lg">
+  <div class="flex bg-slate-200 rounded-lg overflow-hidden shadow-lg">
     <a href={"/articles/" + article.slug}> Image goes here</a>
     <div class="p-6">
       <h2 class="text-2xl font-semibold mb-2">
