--- a/src/components/MostRecentArticle.astro
+++ b/src/components/MostRecentArticle.astro
@@ -16,10 +16,10 @@ interface Props {
       class="absolute inset-0 flex flex-col items-center justify-center bg-black opacity-80 hover:opacity-75 transition duration-300 ease-in-out text-white text-center rounded-2xl"
     >
       <div>
-        <h2 class="text-2xl fontsemibold sm:text-3xl">
+        <h2 class="text-2xl font-semibold sm:text-3xl">
             {article.data.title}
         </h2>
-        <p class-"text-xl mt-4">{formatDate(article.data.pubDate)}</p>
+        <p class="text-xl mt-4">{formatDate(article.data.pubDate)}</p>
         <div class="flex mt-4 justify-center">
             {article.data.tags.map(tag => (
               <span
