--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,13 @@
 ---
+import { getCollection } from "astro:content";
+import { CollectionEntry } from "astro:content";
 import { capitalize } from "../utils";
 
-const uniqueTags: string[] = ["Tech", "Parenting", "Dancing"];
+const allBlogArticles: CollectionEntry<'blog'>[] = await getCollection('blog');
+
+const tags: string[] = allBlogArticles.flatMap((article: any) => article.data.tags);
+
+const uniqueTags: string[] = [...new Set(tags)];
 ---
 
 <footer class="bg-indigo-600 text-white">
@@ -17,11 +23,11 @@ const uniqueTags: string[] = ["Tech", "Parenting", "Dancing"];
       </div>
       <div class="mt-6">
         <h3 class="text-xl font-semibold mb-4">Categories</h3>
-        <ul>
+        <ul class="text-white text-sm">
           {
             uniqueTags.map((tag) => (
               <li class="mb-2">
-                <a href="">#{capitalize(tag)}</a>
+                <a href={'/articles/tag/' + tag}>#{capitalize(tag)}</a>
               </li>
             ))
           }
