fix some bugs(unused imports) and added AWS adapter

--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -1,7 +1,6 @@
 ---
 import { formatDate } from "../utils";
-import { CollectionEntry } from "astro:content";
-import { MarkdownFrontmatterParseError } from "../../node_modules/astro/dist/core/errors/errors-data";
+import type { CollectionEntry } from "astro:content";
 import Tags from "./Tags.astro";
 
 const { article } = Astro.props;
