--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import { CollectionEntry } from "astro:content";
+import type { CollectionEntry } from "astro:content";
 import { capitalize } from "../utils";
 
 const allBlogArticles: CollectionEntry<'blog'>[] = await getCollection('blog');
