--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -39,6 +39,6 @@ const articlesForPage: CollectionEntry<'blog'>[] = allBlogArticles.slice((curren
 currentPage={currentPage}
 totalPages={totalPages}
 disablePrevious={currentPage === 1}
-disableNext={currentPage === totalPages}
+disableNext={currentPage === totalPages} />
 
 </MainLayout>
