--- a/src/pages/articles/tag/[...tag].astro
+++ b/src/pages/articles/tag/[...tag].astro
@@ -24,9 +24,9 @@ const tagArticles = allBlogArticles.filter((article) =>
 ---
 
 <MainLayout>
-  <a href="/articles" class="inline-block">Back to Articles</a>
-  <h1>#{capitalize(tag)}</h1>
-  <div class="grid">
+  <a href="/articles" class="inline-block rounded bg-gray-100 p-2 mb-6 hover:bg-indigo-500 hover:text-white">Back to Articles</a>
+  <h1 class="text-2xl pb-3">#{capitalize(tag)}</h1>
+  <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
     {tagArticles.map((article) => <ArticleCard article={article} />)}
   </div>
 </MainLayout>
