--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,9 +1,8 @@
 ---
-const { currentPage, totalPages, disablePrevious, disableNext } = Astro.props;
+const { currentPage, disablePrevious, disableNext } = Astro.props;
 
 interface Props {
   currentPage: number;
-  totalPages: number;
   disablePrevious: boolean;
   disableNext: boolean;
 }
@@ -19,7 +18,7 @@ interface Props {
   <a
     href={"/articles?page=" + (currentPage + 1)}
     class={disableNext
-      ? "inline-block bg-gray-100 px-3 py-2 text-gray-400 rounded-lg pinter-none"
+      ? "inline-block bg-gray-100 px-3 py-2 text-gray-400 rounded-lg pointer-events-none"
       : "inline-block bg-indigo-100 px-3 py-2 hover:bg-indigo-600 hover:text-white rounded-lg"}
     >Next</a
   >
