--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -20,5 +20,13 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../constants";
       <slot />
     </section>
     <Foorter />
+    <!-- Start of HubSpot Embed Code -->
+    <script
+      type="text/javascript"
+      id="hs-script-loader"
+      async
+      defer
+      src="//js-na2.hs-scripts.com/243485944.js"></script>
+    <!-- End of HubSpot Embed Code -->
   </body>
 </html>
