chore: update Astro to v5.13.3, restore Amplify adapter, fix HubSpot script hint, tidy config; build verified

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -21,7 +21,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../constants";
     </section>
     <Foorter />
     <!-- Start of HubSpot Embed Code -->
-    <script
+    <script is:inline
       type="text/javascript"
       id="hs-script-loader"
       async
