--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,7 +3,7 @@
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
     <a href="/" class="flex item-center space-x-3 rtl:space=x-reverse"
-      >Contemplador
+      >El Contemplador
     </a>
     <button
       data-collapse-toggle="navbar-default"
