--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,8 +1,8 @@
 ---
-import Nav from "../components/Nav.astro";
 import Foorter from "../components/Footer.astro";
-const { title = "" } = Astro.props;
+import Nav from "../components/Nav.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../constants";
+const { title = "" } = Astro.props;
 ---
 
 <html lang="en">
@@ -21,7 +21,8 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../constants";
     </section>
     <Foorter />
     <!-- Start of HubSpot Embed Code -->
-    <script is:inline
+    <script
+      is:inline
       type="text/javascript"
       id="hs-script-loader"
       async
