--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,9 +16,7 @@ const uniqueTags: string[] = [...new Set(tags)];
       <div class="mt-6">
         <h3 class="text-lg font-semibold mb-4">About</h3>
         <p class="text-white text-sm">
-          El Contemplador is a personal blog by Roosevelt Segura. The intent of
-          this blog is to display web develoment skills and also to share thought
-          and ideas.
+            El Contemplador represents Roosevelt Segura's digital sanctuary where web development meets personal reflection. This platform serves as a conduit for sharing technical insights, development practices, and the evolving landscape of modern web technologies. When not immersed in code, Roosevelt embraces life as a devoted father, passionate dancer, and curious observer of human nature and consciousness.
         </p>
       </div>
       <div class="mt-6">
