--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -12,14 +12,17 @@ interface Props {
   <a
     href={"/articles?page=" + (currentPage - 1)}
     class={disablePrevious
-      ? "inline-block bg-gray-100 px-3 py-2 text-gray-400 rounded-lg pointer-events-none"
-      : "inline-block bg-indigo-100 px-3 py-2 rounded-lg hover:bg-indigo-600 hover:text-white"}>Previous</a
+      ? "inline-block bg-neutral-100 px-3 py-2 text-neutral-400 rounded-lg pointer-events-none"
+      : "inline-block bg-accent-100 px-3 py-2 text-accent-700 rounded-lg hover:bg-accent hover:text-light transition-colors duration-200"}
   >
+    Previous
+  </a>
   <a
     href={"/articles?page=" + (currentPage + 1)}
     class={disableNext
-      ? "inline-block bg-gray-100 px-3 py-2 text-gray-400 rounded-lg pointer-events-none"
-      : "inline-block bg-indigo-100 px-3 py-2 hover:bg-indigo-600 hover:text-white rounded-lg"}
-    >Next</a
+      ? "inline-block bg-neutral-100 px-3 py-2 text-neutral-400 rounded-lg pointer-events-none"
+      : "inline-block bg-accent-100 px-3 py-2 text-accent-700 rounded-lg hover:bg-accent hover:text-light transition-colors duration-200"}
   >
+    Next
+  </a>
 </div>
