--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,9 +2,11 @@
 import Foorter from "../components/Footer.astro";
 import Nav from "../components/Nav.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../constants";
+import "../styles/colors.css";
 const { title = "" } = Astro.props;
 ---
 
+<!doctype html>
 <html lang="en">
   <head>
     <meta name="description" content={SITE_DESCRIPTION} />
@@ -12,8 +14,15 @@ const { title = "" } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{SITE_TITLE} 🤔 {title}</title>
-  </head>
 
+    <!-- Google Fonts - Pacifico & Caveat -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Caveat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
   <body class="">
     <Nav />
     <section class="container mx-auto max-w-screen-xl mt-10 px-8">
@@ -31,3 +40,39 @@ const { title = "" } = Astro.props;
     <!-- End of HubSpot Embed Code -->
   </body>
 </html>
+
+<style is:global>
+  .pacifico-regular {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .caveat-regular {
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .caveat-medium {
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+  }
+
+  .caveat-semibold {
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+  }
+
+  .caveat-bold {
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+  }
+</style>
