--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -10,7 +10,9 @@ import { ARTICLES_PER_PAGE } from "../../constants";
 
 const currentPage: number | null = +Astro.url.searchParams.get('page')! || 1;
 
-const allBlogArticles: CollectionEntry<'blog'>[] = (await getCollection('blog')).sort((a:CollectionEntry<'blog'>, b:CollectionEntry<'blog'>) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
+const allBlogArticles: CollectionEntry<'blog'>[] = (await getCollection('blog', (entry) => {
+    return !entry.data.title.startsWith('Draft');
+})).sort((a:CollectionEntry<'blog'>, b:CollectionEntry<'blog'>) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 
 const totalPages: number = Math.ceil(allBlogArticles.length / ARTICLES_PER_PAGE);
 
