--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,12 @@ import { HOMEPAGE_ARTICLE_LIMIT } from "../constants";
 import SearchForm from "../components/SearchForm.astro";
 import MostRecentArticle from "../components/MostRecentArticle.astro";
 
-const allBlogArticles: CollectionEntry<"blog">[] = await getCollection("blog");
+const allBlogArticles: CollectionEntry<"blog">[] = await getCollection(
+  "blog",
+  (entry) => {
+    return !entry.data.title.startsWith("Draft");
+  }
+);
 const otherArticles: CollectionEntry<"blog">[] = allBlogArticles.slice(1);
 const mostRecentArticle: CollectionEntry<"blog"> = allBlogArticles.sort(
   (a, b) =>
